# aptsign

./: .gitignore  .pylintrc  Earthfile  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
.circleci/: config.yml
aptsign/: __init__.py  cli.py  filters.py  package.py
etc/: 60aptsign  aptsign.yml.example
tests/: conftest.py  test_cli.py  test_filters.py  test_package.py
tests/fixtures/: aptsign_config.yml
