[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aptsign"
version = "0.1.0"
description = "Debian Package Signature Verification Framework"
authors = ["Shaun S"]
license = "BSD-3"

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
tox = "^3.24.1"
pylint = "^2.9.6"
mypy = "^0.910"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
black = "^21.7b0"
mock = "^4.0.3"
types-PyYAML = "^5.4.6"

[tool.pylint]
